<resources>
    <string name="app_name">MeetAbility</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_activity">Activity anlegen</string>
    <string name="search_activty">Activity suchen</string>
    <string name="show_profile">Profil</string>
    <string name="show_history">Historie</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
</resources>
